# TAURI

./: .gitignore  README.md  index.html  package-lock.json  package.json  vite.config.js
src/: App.vue
src-tauri/: Cargo.toml  clustering_interface.py  tauri.conf.json
src-tauri/icons/: icon.icns
src-tauri/src/: lib.rs  lib.rs.save  main.rs
