[package]
name = "clustering-app"
version = "0.1.0"
description = "Aplicación visual para clustering de archivos dump"
authors = ["Tu Nombre"]
license = "MIT"
edition = "2021"

[build-dependencies]
tauri-build = { version = "2.0", features = [] }

[dependencies]
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
tauri = { version = "2.0", features = ["api-all", "shell-open", "dialog-all", "fs-all", "path-all"] }
tokio = { version = "1.0", features = ["full"] }
